# StudyShpere-Rust

./: .env.example  Cargo.toml  MATERIAL_REFACTORING_COMPLETE.md  MODELS_REFACTORING.md  openapi.yaml  repomix-output.txt
.repomix/: bundles.json
endpoints/: api_endpoints_data.md  endpoints.txt  groups_courses_endpoints_data.md  materials_endpoints_data.md  rust_axum_architecture_plan.md  users_endpoints_data.md
migrations/: 20250604094927_create_users_table.sql  20250604094959_create_groups_table.sql  20250604095032_create_group_members_table.sql  20250604095053_create_courses_table.sql  20250604095239_create_join_requests_table.sql  20250604103839_create_materials_table.sql  20250604104052_create_group_labels_table.sql  20250604104053_create_material_labels_table.sql  20250604104118_create_comments_table.sql
src/: lib.rs  main.rs
src/auth/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: auth.rs  comment.rs  course.rs  group.rs  group_member.rs  join_request.rs  material.rs  material_label.rs  mod.rs
src/middleware/: auth.rs  authorization.rs  mod.rs
src/models/: comment.rs  course.rs  group.rs  group_member.rs  join_request.rs  material.rs  material_label.rs  mod.rs  user.rs
src/permissions/: mod.rs
src/routes/: auth.rs  comment.rs  course.rs  group.rs  group_member.rs  join_request.rs  material.rs  mod.rs
src/utils/: helpers.rs  jwt.rs  mod.rs  validation.rs
